PyMaker/datas/object2/RawHTML/i3701/Python_DOC_referPages.python3-5-http-client-py-syntaxerror-invalid-syntax.txt
<div class="post-text" itemprop="text">
<p>I am a beginner in python. Unfortunately, I just deleted the:</p>
<pre><code>    ..Python3.5/http/ 
</code></pre>
<p>directory.</p>
<p>To fix that, I downloaded the same from 
        <a href="https://github.com/python/cpython/tree/master/Lib/http" rel="nofollow noreferrer">https://github.com/python/cpython/tree/master/Lib/http</a></p>
<p>But when I run any script that needs the content of the deleted folder, I get this error</p>
<pre><code>    File "/usr/lib/python3.5/http/client.py", line 1063
        chunk = f"{len(chunk):X}\r\n".encode('ascii') + chunk \
                            ^
    SyntaxError: invalid syntax
</code></pre>
<p>What is the syntax error and how can I fix this ?</p>
<p>Thanks in Advance</p>
</div>
<div class="post-text" itemprop="text">
<p>The line that is throwing the error is using the new 'f-string' syntax <a href="https://docs.python.org/3/whatsnew/3.6.html#whatsnew36-pep498" rel="nofollow noreferrer">introduced in Python 3.6</a>. You are trying to run it with Python 3.5 which does not support this feature.</p>
<p>To fix this you could either redownload the files from <a href="https://github.com/python/cpython/tree/3.5/Lib/http" rel="nofollow noreferrer">3.5 branch</a> or just reinstall Python using the installer.</p>
</div>
<span class="comment-copy">f-strings are new in Python 3.6. You try to run Python 3.6 code with Python 3.5.</span>
<span class="comment-copy">Try <a href="https://github.com/python/cpython/tree/3.5/Lib/http" rel="nofollow noreferrer">github.com/python/cpython/tree/3.5/Lib/http</a>, or just reinstall it properly</span>
